--- a/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
@@ -11,7 +11,7 @@
 
     <h1 id="enter"><a href="./index.html">
         <img src="./img/LEGO_logo.png" alt="레고 로고">
-        <span>LEGO GO!</span>
+        <span>LET'S GO!</span>
     </a>
 </h1>
 
