--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -82,7 +82,7 @@
             <!-- <ul> -->
             <!-- <li> -->
             <a href="#" onclick="goMv('_aHIshgLKA0')">
-                <img src="./img/box2-1.jpg" alt="레고박스">
+                <img src="./img/elsa3.jpg" alt="레고박스">
                 <!-- <ol class="txt"> -->
                 <!-- <li>Star Wars Special</li> -->
                 <!-- <li>350$</li> -->
@@ -92,7 +92,7 @@
             <!-- </ul> -->
         </div>
         <h2 id="enter">
-            NEW!
+            <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
         </h2>
     </main>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ하단ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
