--- a/001.HTML/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/index.html
@@ -19,22 +19,22 @@
             <div class="tmenu fbx">
                 <!-- 1-1-1. sns박스 -->
                 <div class="sns cbx">
-                    <a href="#" class="fi fi--instagram">
+                    <a href="#" class="fi fi-instagram">
                         <span class="ir">
                             인스타그램
                         </span>
                     </a>
-                    <a href="#" class="fi fi--facebook">
+                    <a href="#" class="fi fi-facebook">
                         <span class="ir">
                             페이스북
                         </span>
                     </a>
-                    <a href="#" class="fi fi--twitter">
+                    <a href="#" class="fi fi-twitter">
                         <span class="ir">
                             트위터
                         </span>
                     </a>
-                    <a href="#" class="fi fi--youtube-play">
+                    <a href="#" class="fi fi-youtube-play">
                         <span class="ir">
                             유튜브
                         </span>
