--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ상단ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <header id="top" class="part">
-        <h1 class="tit"><a href="#">LEGO FACTORY</a></h1>
+        <h1 class="tit"><a href="#">LEGO WORLD!</a></h1>
         <nav class="gnb">
             <ul class="glist">
                 <li><a href="#">SHOP</a>
@@ -70,34 +70,35 @@
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ메인ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <main id="cont" class="part rbx">
         <div id="screen2">
-            <iframe id="ifr"
-                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=duHGU6S9hZk&playsinline=1/"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div id="screen">
             <iframe id="ifr2"
                 src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=duHGU6S9hZk&playsinline=1/"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <div id="screen">
+            <iframe id="ifr"
+                src="https://www.youtube.com/embed/?autoplay=1&mute=1&loop=1&playlist=duHGU6S9hZk&playsinline=1/"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
 
-        <div class="list">
+        <div class="cha1">
             <a href="#" onclick="goMv('ifr2','_aHIshgLKA0')">
                 <img src="./img/elsa3.jpg" alt="엘사">
             </a>
         </div>
-        <h2 id="enter">
+        <h2 id="enter1">
             <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
         </h2>
 
 
-        <div class="list">
+        <div class="cha2">
             <a href="#" onclick="goMv('ifr','_aHIshgLKA0')">
                 <img src="./img/elsa3.jpg" alt="엘사">
+                <img src="./img/main3.jpg" alt="엘사">
             </a>
         </div>
-        <h2 id="enter">
+        <h2 id="enter2">
             <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
         </h2>
     </main>
