--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -90,17 +90,17 @@
         <h2 id="enter1">
             <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
         </h2>
-
-
+        
+        
         <div class="cha2">
             <a href="#" onclick="goMv('ifr','_aHIshgLKA0')">
+                <img src="./img/laf.jpg" alt="올라프">
                 <img src="./img/elsa3.jpg" alt="엘사">
-                <img src="./img/main3.jpg" alt="엘사">
             </a>
         </div>
-        <h2 id="enter2">
+        <!-- <h2 id="enter2">
             <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
-        </h2>
+        </h2> -->
     </main>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ하단ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <footer id="info" class="part">
