--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -13,11 +13,6 @@
                 "https://www.youtube.com/embed/" +
                 code +
                 "?autoplay=1&playsinline=1";
-            // document.getElementById("ifr2").src =
-
-            //     "https://www.youtube.com/embed/" +
-            //     code +
-            //     "?autoplay=1&playsinline=1";
         }
     </script>
 </head>
@@ -83,12 +78,12 @@
         </div>
 
         <div class="cha1">
-            <a href="#" onclick="goMv('ifr2','_aHIshgLKA0')">
-                <img src="./img/elsa3.jpg" alt="엘사">
+            <a href="#" onclick="goMv('ifr2','DtesRY5ZFzc')">
+                <img src="./img/aven.jpg" alt="어벤저스">
             </a>
         </div>
         <h2 id="enter1">
-            <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
+            <a href="#" onclick="goMv('DtesRY5ZFzc')">NEW!</a>
         </h2>
         
         
