--- a/001.HTML/000.T_Pj/2.Lego_PJ/index.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/index.html
@@ -79,12 +79,14 @@
 
         <div class="cha1">
             <a href="#" onclick="goMv('ifr2','DtesRY5ZFzc')">
-                <img src="./img/aven.jpg" alt="어벤저스">
+                <img src="./img/crt1.jpg" alt="어벤저스">
             </a>
+            <h2 id="enter1">
+                <a href="#" onclick="goMv('ifr2','DtesRY5ZFzc')">
+                    <span>NEW!</span>
+                </a>
+            </h2>
         </div>
-        <h2 id="enter1">
-            <a href="#" onclick="goMv('DtesRY5ZFzc')">NEW!</a>
-        </h2>
         
         
         <div class="cha2">
@@ -93,9 +95,6 @@
                 <img src="./img/elsa3.jpg" alt="엘사">
             </a>
         </div>
-        <!-- <h2 id="enter2">
-            <a href="#" onclick="goMv('_aHIshgLKA0')">NEW!</a>
-        </h2> -->
     </main>
     <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ하단ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <footer id="info" class="part">
