--- a/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
+++ b/001.HTML/000.T_Pj/2.Lego_PJ/intro.html
@@ -9,7 +9,8 @@
 <body>
     <video id="video" src="./img/legointro1080-1.mp4" autoplay muted loop playsinline="./img/intro.png"></video>
 
-    <h1 id="enter"><a href="./index.html">
+    <h1 id="enter">
+        <a href="./index.html">
         <img src="./img/LEGO_logo.png" alt="레고 로고">
         <span>LET'S GO!</span>
     </a>
