--- a/index1.html
+++ b/index1.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="./001.HTML/009.SliceMove_PJ/lotte.html"target="_blank">LOTTE</a>
             </li>
+            <li>
+                <a href="./001.HTML/008.VOGUE_PJ/002.site/index.html"target="_blank">VOGUE</a>
+            </li>
         </ul>
     </h2>
 </body>
