--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -34,12 +34,19 @@
             background-color: rgba(255, 195, 195, 0.438);
         }
 
+        .Mvideo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+        }
+
         .cont>section {
             width: 100%;
             height: 100vh;
         }
 
-        .info{
+        .info {
             height: 366px;
             background-color: rgb(200, 200, 200);
         }
@@ -53,6 +60,9 @@
         </header>
     </div>
     <div id="cont">
+        <div class="Mvideo">
+            <video src="./BIFF2021_1080.mp4" autoplay muted loop></video>
+        </div>
         <main class="cont ibx">
             <section class="cont1">
                 <h2>컨텐츠1</h2>
