--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -61,7 +61,7 @@
     </div>
     <div id="cont">
         <div class="Mvideo">
-            <video src="./BIFF2021_1080.mp4" autoplay muted loop></video>
+            <video src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
         </div>
         <main class="cont ibx">
             <section class="cont1">
