--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -7,55 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>부산국제영화제</title>
     <link rel="stylesheet" href="./main.css">
-    <style>
-        html,
-        body,
-        h1,
-        h2 {
-            margin: 0;
-            padding: 0;
-        }
-
-        body * {
-            outline: 1px dashed rgb(158, 158, 158);
-        }
-
-        .ibx {
-            max-width: 1300px;
-            margin: 0 auto;
-        }
-
-        #top {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 80px;
-            background-color: rgba(255, 195, 195, 0.438);
-        }
-
-        .Mvideo {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            overflow: hidden;
-        }
-
-        .cont>section {
-            width: 100%;
-            height: 100vh;
-        }
-
-        .info {
-            height: 366px;
-            background-color: rgb(200, 200, 200);
-        }
-    </style>
 </head>
 
 <body>
     <div id="top">
         <header class="top ibx">
+            <div class="logo">
+                <a href="#">
+                    <img src="./img/Biff_logo.jpg" alt="BIFF로고">
+                </a>
+            </div>
 
         </header>
     </div>
