--- a/003.JS학습/JS004.html
+++ b/003.JS학습/JS004.html
@@ -436,7 +436,7 @@ function chgMv() {
                 film.trailer();
             }
             txt6.style.background = 
-            "url()"
+            "url()";
 }
 
     </script>
