--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -16,6 +16,15 @@
                 <a href="#">
                     <img src="./img/Biff_logo.jpg" alt="BIFF로고">
                 </a>
+                    <ul>
+                        <li><a href="#">BIFF</a></li>
+                        <li><a href="#">영화제 가이드</a></li>
+                        <li><a href="#">프로그램</a></li>
+                        <li><a href="#">커뮤니티</a></li>
+                    </ul>
+            </div>
+            <div class="ham">
+                ＝
             </div>
 
         </header>
