--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -14,18 +14,21 @@
         <header class="top ibx">
             <div class="logo">
                 <a href="#">
-                    <img src="./img/Biff_logo.jpg" alt="BIFF로고">
+                    <img class="log" src="./img/Biff_logo.jpg" alt="BIFF로고">
                 </a>
-                    <ul>
+                    <ul class="lb">
                         <li><a href="#">BIFF</a></li>
                         <li><a href="#">영화제 가이드</a></li>
+                    </ul>
+
+                    <ul class="rb">
                         <li><a href="#">프로그램</a></li>
                         <li><a href="#">커뮤니티</a></li>
                     </ul>
             </div>
-            <div class="ham">
+            <!-- <div class="ham">
                 ＝
-            </div>
+            </div> -->
 
         </header>
     </div>
