--- a/001.HTML/008.VOGUE_PJ/002.site/index.html
+++ b/001.HTML/008.VOGUE_PJ/002.site/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/media.css">
     <!-- 미디어쿼리를 본css하단에 link방식으로 넣어준다 -->
-<script src="js/common.js"></script>
+    <script src="js/common.js"></script>
 </head>
 
 <body>
@@ -159,69 +159,69 @@
                                 <a href="#">SHOPPING</a>
                             </li>
                         </ul>
-                </nav>
-                <!-- 1-5-2.모바일 sns메뉴 -->
-                <div class="mosns">
-                    <a href="#" class="fi fi-instagram">
-                        <span class="ir">
-                            인스타그램
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-facebook">
-                        <span class="ir">
-                            페이스북
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-twitter">
-                        <span class="ir">
-                            트위터
-                        </span>
-                    </a>
-                    <a href="#" class="fi fi-youtube-play">
-                        <span class="ir">
-                            유튜브
-                        </span>
-                    </a>
-                    <a href="#">
-                        <span class="ir">
-                            카카오스토리
-                        </span>
-                    </a>
+                    </nav>
+                    <!-- 1-5-2.모바일 sns메뉴 -->
+                    <div class="mosns">
+                        <a href="#" class="fi fi-instagram">
+                            <span class="ir">
+                                인스타그램
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-facebook">
+                            <span class="ir">
+                                페이스북
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-twitter">
+                            <span class="ir">
+                                트위터
+                            </span>
+                        </a>
+                        <a href="#" class="fi fi-youtube-play">
+                            <span class="ir">
+                                유튜브
+                            </span>
+                        </a>
+                        <a href="#">
+                            <span class="ir">
+                                카카오스토리
+                            </span>
+                        </a>
+                    </div>
+                    <!-- 1-5-3.매거진 박스 -->
+                    <figure class="magbox">
+                        <!-- 잡지커버 이미지 -->
+                        <a href="#" class="mcover">
+                            <img src="./images/cover.jpg" alt="보그표지">
+                        </a>
+                        <!-- 잡지설명 -->
+                        <figcaption>
+                            정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
+                        </figcaption>
+                        <!-- 정기구독버튼 -->
+                        <button class="magbtn">
+                            정기구독신청
+                        </button>
+                    </figure>
+                    <!-- 1-5-4. 하단링크박스 -->
+                    <ul class="moblink">
+                        <li>
+                            <a href="#">
+                                회사소개 /
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                광고 및 제휴 /
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                개인정보 처리방침
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <!-- 1-5-3.매거진 박스 -->
-                <figure class="magbox">
-                    <!-- 잡지커버 이미지 -->
-                    <a href="#" class="mcover">
-                        <img src="./images/cover.jpg" alt="보그표지">
-                    </a>
-                    <!-- 잡지설명 -->
-                    <figcaption>
-                        정기구독을 신청하면 최대 30% 할인혜택을 드립니다!
-                    </figcaption>
-                    <!-- 정기구독버튼 -->
-                    <button class="magbtn">
-                        정기구독신청
-                    </button>
-                </figure>
-                <!-- 1-5-4. 하단링크박스 -->
-                <ul class="moblink">
-                    <li>
-                        <a href="#">
-                            회사소개 /
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            광고 및 제휴 /
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            개인정보 처리방침
-                        </a>
-                    </li>
-                </ul>
-            </div>
             </div><!-- 모바일용 링크 끝 -->
         </header>
     </div>
@@ -343,6 +343,10 @@
             </ul>
         </footer>
     </div>
+    <!-- 위로가기 버튼 -->
+    <a href="#" class="tbtn fi fi-angle-up">
+        <span class="ir">위로가기버튼</span>
+    </a>
 </body>
 
 </html>
