--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="top">
         <div class="ham">
-            <a href="#">≡</a>
+            <button class="menu">≡</button> 
         </div>
         <header class="top ibx">
             <div class="logo">
@@ -43,8 +43,10 @@
 
             <h1 id="gosub">
                 <a href="sub1.html">
-                    <img src="./img/logo.png" alt="BIFF로고">
-                    <span>2021-12-10</span>
+                    <img src="./img/logo1.png" alt="BIFF로고">
+                    <span>BUSAN <br>
+                        International Film Festival <br>
+                        6 - 15 October 2021</span>
                 </a>
             </h1>
         
