--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -107,18 +107,18 @@
                         <ul>
                             <li>
                                 <a href="#" onclick="goMv('dWEQjU3GCE0')">
-                                    <img src="./img/ml6.png" alt="연애 빠진 로맨스">
+                                    <img src="./img/new.jpeg" alt="뉴 커런츠상">
                                     <ol class="movtxt">
-                                        <li>연애 빠진 로맨스</li>
-                                        <li>전종서,손석구</li>
-                                        <li>멜로/로맨스, 코미디</li>
+                                        <li>뉴 커런츠상</li> <br>
+                                        <li>안녕, 내 고향</li>
+                                        <li>왕얼저우 | 중국</li>
                                     </ol>
                                 </a></li>
                             <li>
                                 <a href="#" onclick="goMv('RoMUUNBjO_8')">
                                     <img src="./img/ml2.jpeg" alt="킹메이커">
                                     <ol class="movtxt">
-                                        <li>킹메이커</li>
+                                        <li>킹메이커</li> <br>
                                         <li>설경구,이선균</li>
                                         <li>드라마</li>
                                     </ol>
@@ -127,7 +127,7 @@
                                 <a href="#" onclick="goMv('bR27YmkAK24')">
                                     <img src="./img/ml3.jpg" alt="비상선언">
                                     <ol class="movtxt">
-                                        <li>비상선언</li>
+                                        <li>비상선언</li> <br>
                                         <li>송강호,이병헌</li>
                                         <li>드라마</li>
                                     </ol>
@@ -136,7 +136,7 @@
                                 <a href="#" onclick="goMv('SvKCs-80uk4')">
                                     <img src="./img/ml5.jpg" alt="킹스맨: 퍼스트 에이전트">
                                     <ol class="movtxt">
-                                        <li>킹스맨: 퍼스트 에이전트</li>
+                                        <li>킹스맨: 퍼스트 에이전트</li> <br>
                                         <li>랄프 파인즈, 해리스 딕킨슨</li>
                                         <li>액션</li>
                                     </ol>
