--- a/003.JS학습/JS006.html
+++ b/003.JS학습/JS006.html
@@ -193,8 +193,22 @@
                 4. 만약 0부터 원하는 수를 구할 경우 원하는 수보다
                    1큰수를 곱하고 내림처리한다!
                 Math.floor(Math.random()*최대수보다1큰수)
+                ________________________________________
+
+                [ 중간 범위의 난수 발생시키기 ]
+
+                -> 1부터 최대수를 구한후 시작수 만큼 더한면 된다!
+
+                예) 4~6 사이의 난수일 경우
+                    1~3 사이의 난수를 발행한 후 차이수인 3을 더하여
+                    처리하면 된다!
+                    Math.ceil(Math.random()*3)+3
+
 
             *******************************************/
+
+            // console.log("중간범위랜덤수(4~6):\n",
+            // Math.ceil(Math.random()*3)+3);
 
             // 랜덤 이미지 만들기
 
@@ -210,6 +224,10 @@
             // 변경대상: 랜덤이미지 박스 - .imbx
             let imbx = document.querySelector(".imbx");
 
+            // 직전랜덤수 저장변수
+            let bfnum = 5;
+            // 5를 할당한 이유는 0~3사이의 수가 아니면 된다!(처음엔 통과)
+
             /************************************ 
                 함수명: insImg
                 기능: 박스에 랜덤이미지 넣기!
@@ -220,9 +238,24 @@
                 let rnum = Math.floor(Math.random() * 4);
 
                 // 1. 호출확인
-                console.log("랜덤이미지!", rnum);
+                // console.log("랜덤이미지!", rnum);
 
-                // 2. 랜덤수에 맞는 배열이미지 만들어 넣기!
+                // 2. 직전랜덤수와 같으면 다를때까지 반복랜덤수 만들기
+                while(rnum===bfnum){
+                    rnum = Math.floor(Math.random() * 4);
+                    // console.log("반복랜덤수:",rnum);
+                } ////////// while문 //////////////////////
+
+
+                // while(조건식){코드} 
+                // -> 조건에 맞는 동안 계속 코드실행!
+
+                // 3. 만약 while문을 통과했으면 현재발생한 랜덤수를
+                // 직전랜덤수변수인 bfnum에 저장한다!
+                // 그래야 다음번에 이것으로 비교하니까!
+                bfnum = rnum;
+
+                // 4. 랜덤수에 맞는 배열이미지 만들어 넣기!
                 // 대상: .imbx -> imbx 변수에 할당!
                 imbx.innerHTML = 
                 `<img src="${rimg[rnum]}" alt="이미지">`;
@@ -232,6 +265,10 @@
 
             // 랜덤이미지 넣기 함수 최초호출!
             insImg();
+
+            // 랜덤이미지 넣기 함수 인터발호출!
+            setInterval(insImg,1500);
+            // 1.5초 간격으로 함수반복호출하기!
 
 
         }); ///////////// 로드구역 //////////////////
