--- a/003.JS학습/JS009.html
+++ b/003.JS학습/JS009.html
@@ -31,7 +31,7 @@
                     let tg = x.querySelector("div");
 
                     // 서브메뉴 ol의 높이값 구하기 (보정+10)
-                    let hv = x.querySelector("ol").offsetHeight+10;
+                    let hv = x.querySelector("ol").offsetHeight + 10;
                     // console.log("높이값:",hv)
 
                     // 서브메뉴 열리기
@@ -71,85 +71,94 @@
             for (let x of link) {
 
                 // 클릭 이벤트 설정하기
-                x.onclick = ()=>{
+                x.onclick = () => {
 
                     // 1. a요소의 텍스트 읽어오기
                     let txt = x.innerText;
                     // console.log("링크텍스트:",txt);
-                    
+
+                    // 2. 각 이동할 url 주소 셋팅하기
+                    // url주소 변수
+                    let url;
+                    // 분기를 switch case문으로
+                    switch (txt) {
+                        case "Google":
+                            url = "http://www.google.com";
+                            break;
+                        case "Naver":
+                            url = "http://www.naver.com";
+                            break;
+                        case "Daum":
+                            url = "http://www.daum.net";
+                            break;
+                        case "Nate":
+                            url = "http://www.nate.com";
+                            break;
+                        case "SK":
+                            url = "http://www.sktelecom.com";
+                            break;
+                        case "KT":
+                            url = "http://www.kt.com";
+                            break;
+                        case "Uplus":
+                            url = "http://www.uplus.co.kr";
+                            break;
+                        case "CGV":
+                            url = "http://www.cgv.co.kr";
+                            break;
+                        case "MEGABOX":
+                            url = "http://www.megabox.co.kr";
+                            break;
+                        case "LOTTE CINEMA":
+                            url = "https://www.lottecinema.co.kr/NLCHS";
+                            break;
+                        case "GMARKET":
+                            url = "http://www.gmarket.co.kr";
+                            break;
+                        case "11번가":
+                            url = "http://www.11st.co.kr";
+                            break;
+                        case "Auction":
+                            url = "http://www.auction.co.kr";
+                            break;
+                        case "스토어팜":
+                            url = "https://shopping.naver.com/";
+                            break;
+                        case "인터파크":
+                            url = "http://www.interpark.co.kr";
+                            break;
+                        case "쿠팡":
+                            url = "http://www.coopang.co.kr";
+                            break;
+                        case "Apple":
+                            url = "http://www.apple.com";
+                            break;
+                        case "Samsung":
+                            url = "http://www.samsung.com";
+                            break;
+                        case "넷마블":
+                            url = "http://www.netmarble.net";
+                            break;
+                        case "넥슨":
+                            url = "https://www.nexon.com";
+                            break;
+                        case "IMC":
+                            url = "http://www.imc.co.kr";
+                            break;
+                    }
+
+                    // console.log(url);/
+
+                    // 3. 페이지 이동하기(새창으로)
+                    window.open().location.href = url;
+                    // window.open() : 새창열기
+                    // location.href = 주소 : 페이지 이동하기
+
                     // a요소 기본이동막기
                     return false;
                 };
 
             }
-
-
-            /* case "Google":
-                url = "http://www.google.com";
-                break;
-            case "Naver":
-                url = "http://www.naver.com";
-                break;
-            case "Daum":
-                url = "http://www.daum.net";
-                break;
-            case "Nate":
-                url = "http://www.nate.com";
-                break;
-            case "SK":
-                url = "http://www.sktelecom.com";
-                break;
-            case "KT":
-                url = "http://www.kt.com";
-                break;
-            case "Uplus":
-                url = "http://www.uplus.co.kr";
-                break;
-            case "CGV":
-                url = "http://www.cgv.co.kr";
-                break;
-            case "MEGABOX":
-                url = "http://www.megabox.co.kr";
-                break;
-            case "LOTTE CINEMA":
-                url = "https://www.lottecinema.co.kr/NLCHS";
-                break;
-            case "GMARKET":
-                url = "http://www.gmarket.co.kr";
-                break;
-            case "11번가":
-                url = "http://www.11st.co.kr";
-                break;
-            case "Auction":
-                url = "http://www.auction.co.kr";
-                break;
-            case "스토어팜":
-                url = "https://shopping.naver.com/";
-                break;
-            case "인터파크":
-                url = "http://www.interpark.co.kr";
-                break;
-            case "쿠팡":
-                url = "http://www.coopang.co.kr";
-                break;
-            case "Apple":
-                url = "http://www.apple.com";
-                break;
-            case "Samsung":
-                url = "http://www.samsung.com";
-                break;
-            case "넷마블":
-                url = "http://www.netmarble.net";
-                break;
-            case "넥슨":
-                url = "https://www.nexon.com";
-                break;
-            case "IMC":
-                url = "http://www.imc.co.kr";
-                break; */
-
-
-
 
             // html 컬렉션 참고:
             // https://www.w3schools.com/js/js_htmldom_collections.asp
