--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -70,15 +70,21 @@
             </div>
 
             <div class="gnb">
-                <ul class="lb">
-                    <li><a href="#">BIFF</a></li>
-                    <li><a href="#">영화제 가이드</a></li>
-                </ul>
+                <div>
+                    <ul class="lb">
+                        <li><a href="#">BIFF</a></li>
+                        <li><a href="#">영화제 가이드</a></li>
+                    </ul>
 
-                <ul class="rb">
-                    <li><a href="#">프로그램</a></li>
-                    <li><a href="#">커뮤니티</a></li>
-                </ul>
+                </div>
+                <div>
+                    <ul class="rb">
+                        <li><a href="#">프로그램</a></li>
+                        <li><a href="#">커뮤니티</a></li>
+                    </ul>
+
+                </div>
+
             </div>
 
         </header>
