--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -206,7 +206,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class>
+                <div class="fnb">
                     <ul class="fnb list-inline">
                         <li><a href="#">개인정보처리방침</a></li>
                         <li><a href="#">저작권정책</a></li>
