--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -97,7 +97,7 @@
                 <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
                 <h1 id="gosub">
                     <a href="sub1.html">
-                        <img src="./img/logo1.png" alt="BIFF로고">
+                        <img src="./img/logo.gif" alt="BIFF로고">
                         <span>
                             BUSAN <br>
                             International Film Festival <br>
@@ -107,45 +107,46 @@
             </section>
             <!-- /******************************************* cont2 *******************************************/ -->
             <section class="cont2">
-                <h2 class="ad">수상작 및 수상자</h2>
+                <h2 class="ad">BIFF 2021 수상작</h2>
 
                 <nav class="mlist">
                     <ul>
                         <li>
                             <a href="#" onclick="goMv('dWEQjU3GCE0')">
-                                <img src="./img/new.jpeg" alt="뉴 커런츠상">
+                                <img src="./img/mi1.jpeg" alt="뉴 커런츠상">
                                 <ol class="movtxt">
                                     <li>뉴 커런츠상</li> <br>
-                                    <li>안녕, 내 고향</li>
+                                    <li>&lt; 안녕, 내 고향&gt; </li> <br>
                                     <li>왕얼저우 | 중국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('RoMUUNBjO_8')">
-                                <img src="./img/ml2.jpeg" alt="킹메이커">
+                                <img src="./img/mi2.jpeg" alt="매스">
                                 <ol class="movtxt">
-                                    <li>킹메이커</li> <br>
-                                    <li>설경구,이선균</li>
-                                    <li>드라마</li>
+                                    <li>플래시 포워드 관객상</li> <br>
+                                    <li>&lt;매스&gt;</li><br>
+                                    <li>프란 크랜즈 | 미국</li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('bR27YmkAK24')">
-                                <img src="./img/ml3.jpg" alt="비상선언">
+                                <img src="./img/mi3.jpeg" alt="아임쏘쏘리">
                                 <ol class="movtxt">
-                                    <li>비상선언</li> <br>
-                                    <li>송강호,이병헌</li>
-                                    <li>드라마</li>
+                                    <li>부산시네필상</li> <br>
+                                    <li>&lt;아임 쏘 쏘리&gt;</li> <br>
+                                    <li>자오량 | 대한민국
+                                    </li>
                                 </ol>
                             </a></li>
                         <li>
                             <a href="#" onclick="goMv('SvKCs-80uk4')">
-                                <img src="./img/ml5.jpg" alt="킹스맨: 퍼스트 에이전트">
+                                <img src="./img/mi4.jpeg" alt="초록밤">
                                 <ol class="movtxt">
-                                    <li>킹스맨: 퍼스트 에이전트</li> <br>
-                                    <li>랄프 파인즈, 해리스 딕킨슨</li>
-                                    <li>액션</li>
-                                </ol>
+                                    <li>CGV아트하우스상</li> <br>
+                                    <li>&lt;초록밤&gt;</li> <br>
+                                    <li>윤서진 | 대한민국</li>
+                            </ol>
                             </a></li>
                         <!-- <li>
                                 <a href="#" onclick="goMv('KBT_YZdoF6g')">
