--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -146,7 +146,7 @@
                                     <li>CGV아트하우스상</li> <br>
                                     <li>&lt;초록밤&gt;</li> <br>
                                     <li>윤서진 | 대한민국</li>
-                            </ol>
+                                </ol>
                             </a></li>
                         <!-- <li>
                                 <a href="#" onclick="goMv('KBT_YZdoF6g')">
@@ -169,10 +169,93 @@
                     </ul>
                 </nav>
             </section>
+            <!-- /******************************************* cont3 *******************************************/ -->
             <section class="cont3">
-                <h2>컨텐츠3</h2>
-            </section>
-            <section class="cont4">
+                <h3 class="ad">아시아영화의 창</h3>
+                <nav class="mlist">
+                    <ul>
+                        <li>
+                            <a href="#" onclick="goMv('KBT_YZdoF6g')">
+                                <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                <ol class="movtxt">
+                                    <li>엔칸토: 마법의 세계</li>
+                                    <li>스테파니 비트리즈</li>
+                                    <li>애니메이션</li>
+                                </ol>
+                            </a></li>
+                            <li>
+                                <a href="#" onclick="goMv('yFZh-Wqi7RI')">
+                                    <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                    <ol class="movtxt">
+                                        <li>스파이더맨: 노 웨이 홈</li>
+                                        <li>톰 홀랜드, 젠데이아 콜먼</li>
+                                        <li>액션,판타지</li>
+                                    </ol>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" onclick="goMv('KBT_YZdoF6g')">
+                                    <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                    <ol class="movtxt">
+                                        <li>엔칸토: 마법의 세계</li>
+                                        <li>스테파니 비트리즈</li>
+                                        <li>애니메이션</li>
+                                    </ol>
+                                </a></li>
+                                <li>
+                                    <a href="#" onclick="goMv('yFZh-Wqi7RI')">
+                                        <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                <ol class="movtxt">
+                                    <li>스파이더맨: 노 웨이 홈</li>
+                                    <li>톰 홀랜드, 젠데이아 콜먼</li>
+                                    <li>액션,판타지</li>
+                                </ol>
+                            </a>
+                        </li>
+                    </ul>
+                    <h3 class="ad">와이드 앵글</h3>
+                    <ul>
+                        <li>
+                            <a href="#" onclick="goMv('KBT_YZdoF6g')">
+                                <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                <ol class="movtxt">
+                                    <li>엔칸토: 마법의 세계</li>
+                                    <li>스테파니 비트리즈</li>
+                                    <li>애니메이션</li>
+                                </ol>
+                            </a></li>
+                            <li>
+                                <a href="#" onclick="goMv('yFZh-Wqi7RI')">
+                                    <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                    <ol class="movtxt">
+                                        <li>스파이더맨: 노 웨이 홈</li>
+                                        <li>톰 홀랜드, 젠데이아 콜먼</li>
+                                        <li>액션,판타지</li>
+                                    </ol>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" onclick="goMv('KBT_YZdoF6g')">
+                                    <img src="./img/ml5.jpg" alt="엔칸토:마법의 세계">
+                                    <ol class="movtxt">
+                                        <li>엔칸토: 마법의 세계</li>
+                                        <li>스테파니 비트리즈</li>
+                                        <li>애니메이션</li>
+                                    </ol>
+                                </a></li>
+                                <li>
+                                    <a href="#" onclick="goMv('yFZh-Wqi7RI')">
+                                        <img src="./img/ml6.png" alt="스파이더맨: 노 웨이 홈">
+                                        <ol class="movtxt">
+                                            <li>스파이더맨: 노 웨이 홈</li>
+                                            <li>톰 홀랜드, 젠데이아 콜먼</li>
+                                            <li>액션,판타지</li>
+                                        </ol>
+                                    </a>
+                                </li>
+                            </ul>
+                            </section>
+                            <section class="cont4">
                 <h2>컨텐츠4</h2>
             </section>
         </main>
